# repo1

./: .gitignore  Jenkinsfile  test.txt
c++tests/sdl-test/: CMakeLists.txt
c++tests/sdl-test-2/: CMakeLists.txt  main.cpp
ccp_srv/: CMakeLists.txt  ccp_server.cpp  ccp_server.h  clnt.cpp  clnt.py  clnt_profiler.py  driver.py  earth_walk.py  ferry_fast.nmea  ferry_slow.nmea  ferry_slow_fast_slow.nmea  input_devices.py  jena.nmea  nmea.cpp  nmea.h  nmea.py  srv.py  srv_driver.py  srv_file.cpp  srv_file.py  test_nmea.cpp  testing.py  vehicle_driver.py  vehicle_phys.py
cmake-tutorial/: CMakeLists.txt  cmake-tutorial-config.h.in  main.cpp  runtest.py  test-expect  test-input
cmake-tutorial/my_meth_lab/: CMakeLists.txt  my_meth_lab.c  my_meth_lab.h
cmake_tutor_5/: CMakeLists.txt  cmake_tutor_5.cpp  gen_sqrt_table.py
codechef/elevatr/: elevatr.py  permutate-nonrecursive.py  permutate-recursive.py  test_input  test_output
codechef/kttable/: CMakeLists.txt  kttable.cpp  test1-input  test2-expected  test2-input
codechef/mxpower/: ALOT_test_case  makefile  mxpower-precalc-optimized.py  mxpower-precalc.py  mxpower.c  mxpower.py  test-input  testgen.py
ewaystat/: eway.py  ewaystat.py  posretr.py  stat.py
ewaystat/data/: eway.db  eway.sql  makefile  unittestdata.db
func/: CMakeLists.txt  CallableSignal.cpp  CallableSignal.h  func.h  main.cpp
general/: geometry.py  pathfinder.py
gtest_test1/: CMakeLists.txt  adder.cpp  adder.h  adder_tests.cpp  main.cpp
indexer/: CMakeLists.txt  main.cpp  test.txt
jenkins-test-proj/: Jenkinsfile  app.cpp  lib.cpp  lib.h  makefile
multi_inherit_virtuals/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  ConsoleReader.cpp  ConsoleReader.h  main.cpp
my_shift/: makefile  my_shift.py  my_shift_db.py  my_shift_gui.py  my_shift_testdata.db
pathfinder/: big_mesh_graph.json  generate_mesh_graph.py  geometrics.py  graph.json  graph_edit.py  graphgen.json  graphgen.py  mesh_graph.json  pathfinder.py
pathwalker/: double_labirinth.json  geometry.py  huge_labirinth.json  labirinth.json  labirinth2.json  obstacle_bypass.py  pathfinder.py  pathwalker.py  quadtree.py  walls.json
polyline_proximity/: polyline_proximity.py
py-flask-test/: flask_test.py  run
py-flask-test/templates/: result.html  search.html
pygame_projs/tutor1/: game_abstracts.py  game_stub.py  game_utils.py  pygame_joystick_test.py  tutor1.py  vector.py
retro_pixel_look_test/: retro_pixel_look_test.py
sdl-test/: main.cpp
snippets/: qlogger.hpp
snippets/command_line_interface/: CommandLineInterface.cpp  CommandLineInterface.h
tcp_srv_clnt/: CMakeLists.txt  clnt.cpp  clnt.py  common.h  nmea.py  srv.cpp  srv.py
timekeeper/: database.sqlite3  run  timekeeper.py  timekeeper_db.py  utils.py
timekeeper/templates/: edit.html  login.html  redirect.html  time.html  timekeeper.html
undead_lock_guard/: CMakeLists.txt  main.cpp
