message( "my_meth_lab library CMakeLists.txt" )
message( "PROJECT_NAME=${PROJECT_NAME}" )
message( "PROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}" )
message( "PROJECT_BINARY_DIR=${PROJECT_BINARY_DIR}" )
message( "CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}" )
message( "CMAKE_BINARY_DIR=${CMAKE_BINARY_DIR}" )
message( "CMAKE_CURRENT_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}" )
message( "CMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}" )

add_library( my_meth_lab my_meth_lab.c )
